# must-implement-trait

./: Cargo.toml  LICENSE  README.md
examples/: async-future-send.rs
src/: lib.rs
tests/: compilation_tests.rs
tests/compilation_test_sources/: enum_implements_send_requires_send.rs  enum_implements_send_sync_requires_send_sync.rs  missing_param.rs  missing_param.stderr  struct_generics.rs  struct_generics.stderr  struct_implements_send_requires_send.rs  struct_implements_send_sync_requires_send_sync.rs  struct_implements_trait_derives_after_must_implement.rs  struct_implements_traits_separate_attributes.rs  struct_violates_send_custom_requires_send.rs  struct_violates_send_custom_requires_send.stderr  struct_violates_send_custom_requires_send_sync.rs  struct_violates_send_custom_requires_send_sync.stderr  struct_violates_send_sync_rc_requires_send_sync.rs  struct_violates_send_sync_rc_requires_send_sync.stderr  struct_violates_trait_derives_after_must_implement.rs  struct_violates_trait_derives_after_must_implement.stderr  struct_where_no_generics.rs
