[package]
name = "must-implement-trait"
version = "0.1.0"
authors = ["Kaelin Laundry <wasabifan@outlook.com>"]
edition = "2018"
license = "MIT"
description = "An attribute proc-macro which enforces that a type (auto-)implements the specified trait(s)."
homepage = "https://github.com/WasabiFan/must-implement-trait/"
repository = "https://github.com/WasabiFan/must-implement-trait/"
readme = "README.md"
categories = ["development-tools"]
keywords = ["proc-macro", "auto-trait"]
include = [
    "Cargo.toml",
    "README.md",
    "src/**/*.rs"
]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0.19"

[dev-dependencies]
trybuild = "1.0"
# for examples/
async-trait = "0.1.36"
